<resources>
    <string name="app_name">CineGate</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="answer_few">Answer few Questions:</string>
    <string name="you_are">You are</string>
    <string name="cine_profession">Cine Professionist</string>
    <string name="fans_club">Fans club</string>
    <string name="basic_info">Your basic info..</string>
    <string name="name">Name</string>
    <string name="email_id">Email Id</string>
    <string name="adhar_no">Aadhar no</string>
    <string name="agreement">By continuing,you are confirming that you have read and agree to our terms of Service and Privacy policy.</string>
    <string name="create_my_account">Create My Account</string>
    <string name="whats_on_your_mind">Whats on your mind?</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile number</string>
    <string name="city_from">Native city</string>
    <string name="living_city">Currently living</string>
    <string name="state">State</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="verify_new_password">Verify new password</string>
    <color name="colorTransparent">#0000</color>


    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="who_are_you">Who are you?</string>
    <string name="completed_projects">Completed projects</string>
    <string name="recent_projects">Recent projects</string>
    <string name="awards">Awards</string>
    <string name="known_languages">Known languages</string>
    <string name="skills">Skills</string>
    <string name="hobbies">Hobbies</string>
    <string name="likes">Likes</string>

    <!--Tabs-->
    <string name="home">HOME</string>
    <string name="category">CATEGORY</string>
    <string name="fans">FANS CLUB</string>
    <string name="about">MY WALL</string>
    <string name="events">EVENTS</string>
    <string name="language">LANGUAGE</string>
    <string name="bonus">BONUS</string>
    <string name="login_field_empty_warning">Please Enter the UserName and Password</string>
    <string name="no_internet">No Internet!. Please check your internet connection</string>
    <string name="category_hint">Select your category</string>
    <string name="language_hint">Select your language</string>

    <!--user category-->
    <string name="user_type_professional">cineprofession</string>
    <string name="user_type_fans">fans</string>
    <string name="sub_category_hint">Select sub category</string>
    <string name="lname">LName</string>
    <string name="fname">FName</string>

</resources>
