<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_few"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_are"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/cineProfessionistButton"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:text="@string/cine_profession"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/fansClubButton"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:text="@string/fans_club"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"/>
    </android.support.v7.widget.LinearLayoutCompat>
</RelativeLayout>