<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".views.activity.LoginActivity">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"

            android:src="@drawable/login_icon" />
    </RelativeLayout>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/loginUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="prabu944"

                android:hint="@string/username_hint"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="123456"
              android:hint="@string/password_hint"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/saveLoginCheckBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:layout_marginTop="10dp"/>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/signUPButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="0.4"
                android:background="@drawable/button_bg"
                android:text="@string/sign_up"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="7dp"
                android:layout_weight="0.4"
                android:background="@drawable/button_bg"
                android:text="@string/login"
                android:textColor="@android:color/white" />
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/forgot_password"/>
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>
