<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="7dp">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextAppearance.AppCompat">

        <EditText
            android:id="@+id/currentPasswordView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/current_password" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_new_password"
        android:layout_width="match_parent"
        app:hintTextAppearance="@style/TextAppearance.AppCompat"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/newPasswordView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/new_password" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_verify_new_password"
        android:layout_width="match_parent"
        app:hintTextAppearance="@style/TextAppearance.AppCompat"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/verifyNewPasswordView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/verify_new_password" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textStyle="bold"
        android:id="@+id/errorText"
        android:textColor="@color/colorErro"/>

</LinearLayout>