<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/custom_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/view"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/basic_info_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/basic_info"
                android:textSize="16sp"
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                android:background="#e5e5e5"
                android:textStyle="bold"
                android:textColor="#999999"
                />




            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/linearCategory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                android:layout_below="@+id/basic_info_text"
                    android:padding="7dp">


                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/language_spinner"
                        android:layout_width="match_parent"
                        style="@android:style/Widget.Holo.Light.Spinner"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp" />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/category_spinner"
                        style="@android:style/Widget.Holo.Light.Spinner"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp" />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/sub_category_spinner"
                        android:layout_width="match_parent"
                        style="@android:style/Widget.Holo.Light.Spinner"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp" />

                </android.support.v7.widget.LinearLayoutCompat>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/personal_info_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Personal Information"
                android:textSize="16sp"
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                android:background="#e5e5e5"
                android:textStyle="bold"

                android:layout_below="@+id/linearCategory"
                android:textColor="#999999"
               />



                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_below="@+id/personal_info_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/textViewFname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="FIRST NAME"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/regName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/name"
                            android:layout_marginTop="7dp"
                            android:textSize="13sp"
                            android:hint="@string/fname"
                            android:maxLines="1" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/textViewLname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="LAST NAME"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/reglName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/name"
                            android:layout_marginTop="7dp"
                            android:textSize="13sp"
                            android:hint="@string/lname"
                            android:maxLines="1" />


                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/textViewUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="USER NAME"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/regUserName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/name"
                            android:layout_marginTop="7dp"
                            android:textSize="13sp"
                            android:hint="@string/username_hint"
                            android:maxLines="1" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/textViewEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="EMAIL ID"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/regEmailId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/email"
                            android:layout_marginTop="7dp"
                            android:textSize="13sp"
                            android:hint="@string/email_id"
                            android:maxLines="1" />



                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/textViewPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="PASSWORD"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />
                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/regPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/psw"
                            android:layout_marginTop="7dp"
                            android:textSize="13sp"
                            android:hint="@string/password_hint"
                            android:maxLines="1" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/textViewAdhar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="AADHAR NUMBER"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp"
                        />
                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/regAadhar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/mobile"
                            android:layout_marginTop="7dp"
                            android:textSize="13sp"
                            android:hint="@string/adhar_no"
                            android:maxLines="1" />


                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/agreement"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        />

                    <Button
                        android:id="@+id/createMyAccountButton"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/button_bg"
                        android:text="@string/create_my_account"
                        android:textColor="@android:color/white" />

                </android.support.v7.widget.LinearLayoutCompat>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>