<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    android:orientation="vertical"
    tools:context=".views.activity.EditProfile">

    <include
        layout="@layout/custom_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:padding="5dp">

                    <com.cine.views.widgets.CircularImageView
                        android:id="@+id/userProfilePic"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:src="@mipmap/ic_launcher_round"
                        app:civ_border_color="#FFFFFF"
                        app:civ_border_width="2dp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/nameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@+id/userProfilePic"
                        android:text="Name," />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/professionTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/nameTextView"
                        android:layout_marginLeft="3dp"
                        android:layout_toRightOf="@+id/nameTextView"
                        android:text="Director" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/genderStatusCityTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/nameTextView"
                        android:layout_below="@+id/nameTextView"
                        android:layout_marginTop="8dp"
                        android:text="Male, Married, Chennai"

                        />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/birthdayTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/nameTextView"
                        android:layout_below="@+id/genderStatusCityTextView"
                        android:layout_marginTop="8dp"
                        android:text="December 14"

                        />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/recentProjectsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/nameTextView"
                        android:layout_below="@+id/birthdayTextView"
                        android:layout_marginTop="8dp"
                        android:text="Arunai College ad"

                        />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/aboutMeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/userProfilePic"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="10dp"
                        android:text="About Me :"
                        android:textStyle="bold"

                        />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/aboutMeDescriptionTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/userProfilePic"
                        android:layout_toRightOf="@+id/aboutMeTextView"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="5dp"
                        android:text="I'm a director"


                        />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/personalInfoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_view"

                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:text="Personal Information"
                android:textStyle="bold"

                />
        <android.support.v7.widget.CardView
            android:id="@+id/card_view_personal_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/personalInfoTextView"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            app:cardElevation="4dp"

            >

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editProfileEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/email_id"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_mob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editProfileMobileNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
            <EditText
                android:id="@+id/addressView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:gravity="top"
                android:hint="@string/address"
                android:layout_marginTop="8dp"
                android:inputType="textMultiLine"
                android:lines="3"
                android:scrollHorizontally="false"
                android:background="@drawable/edittext_bg"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_city_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editProfileCityFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/city_from"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_city_living"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editProfileLivingCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/living_city"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editProfileState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/state"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/countrySelectionSpinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="7dp"
                />


            </android.support.v7.widget.LinearLayoutCompat>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</android.support.v7.widget.LinearLayoutCompat>
